@@ -168,6 +168,10 @@ public class StorableProperties implements Storable<StorableProperties>
         {
             return false;
         }
+
+        // The check for the encoder version is done in EncoderManager, as this class does not know about the
+        // registered encoders and their version
+
         return true;
     }
 
